--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,28 @@
       <version>${kotlin.version}</version>
       <scope>test</scope>
     </dependency>
+    <!-- Mock for Kotlin -->
+    <dependency>
+      <groupId>io.mockk</groupId>
+      <artifactId>mockk</artifactId>
+      <version>1.10.0</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- Spec-like tests -->
+    <dependency>
+      <groupId>info.kfgodel</groupId>
+      <artifactId>jspek</artifactId>
+      <version>1.0.0</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- Nice assertions -->
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.11.1</version>
+      <scope>test</scope>
+    </dependency>
 
   </dependencies>
 
