--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
       <version>${kotlin.version}</version>
     </dependency>
 
+    <!-- Allow co-routines -->
+    <dependency>
+      <groupId>org.jetbrains.kotlinx</groupId>
+      <artifactId>kotlinx-coroutines-core</artifactId>
+      <version>1.3.4</version>
+    </dependency>
+
     <!-- Processing core library -->
     <dependency>
       <groupId>org.processing</groupId>
@@ -164,7 +171,11 @@
         <groupId>org.jetbrains.kotlin</groupId>
         <version>${kotlin.version}</version>
 
-        <configuration/>
+        <configuration>
+          <args>
+            <arg>-Xinline-classes</arg>
+          </args>
+        </configuration>
         <executions>
           <execution>
             <id>compile</id>
